@@ -37,7 +37,6 @@ CSetMainPage::CSetMainPage()
 	, m_bShortDateFormat(FALSE)
 	, m_bLastCommitTime(FALSE)
 	, m_bCheckNewer(TRUE)
-	, m_bEnglishTemplate(FALSE)
 	, m_bNoCloseOnRed(FALSE)
 {
 	m_regLanguage = CRegDWORD(_T("Software\\TortoiseSVN\\LanguageID"), 1033);
@@ -49,7 +48,6 @@ CSetMainPage::CSetMainPage()
 	m_regFontSize = CRegDWORD(_T("Software\\TortoiseSVN\\LogFontSize"), 8);
 	m_regLastCommitTime = CRegString(_T("Software\\Tigris.org\\Subversion\\Config\\miscellany\\use-commit-times"), _T(""));
 	m_regCheckNewer = CRegDWORD(_T("Software\\TortoiseSVN\\CheckNewer"), TRUE);
-	m_regEnglishTemplate = CRegDWORD(_T("Software\\TortoiseSVN\\EnglishTemplate"), FALSE);
 	m_regNoCloseOnRed = CRegDWORD(_T("Software\\TortoiseSVN\\AutoCloseNoForReds"), FALSE);
 }
 
@@ -73,7 +71,6 @@ void CSetMainPage::SaveData()
 	m_regFontName = m_sFontName;
 	m_regFontSize = m_dwFontSize;
 	m_regLastCommitTime = (m_bLastCommitTime ? _T("yes") : _T("no"));
-	m_regEnglishTemplate = m_bEnglishTemplate;
 	m_regNoCloseOnRed = m_bNoCloseOnRed;
 }
 
@@ -99,7 +96,6 @@ void CSetMainPage::DoDataExchange(CDataExchange* pDX)
 	DDX_Check(pDX, IDC_SHORTDATEFORMAT, m_bShortDateFormat);
 	DDX_Check(pDX, IDC_COMMITFILETIMES, m_bLastCommitTime);
 	DDX_Check(pDX, IDC_CHECKNEWERVERSION, m_bCheckNewer);
-	DDX_Check(pDX, IDC_ENGLISHTEMPLATE, m_bEnglishTemplate);
 	DDX_Check(pDX, IDC_NOCLOSEONRED, m_bNoCloseOnRed);
 }
 
@@ -116,7 +112,6 @@ BEGIN_MESSAGE_MAP(CSetMainPage, CPropertyPage)
 	ON_BN_CLICKED(IDC_EDITCONFIG, OnBnClickedEditconfig)
 	ON_BN_CLICKED(IDC_CHECKNEWERVERSION, OnBnClickedChecknewerversion)
 	ON_BN_CLICKED(IDC_CLEARAUTH, OnBnClickedClearauth)
-	ON_BN_CLICKED(IDC_ENGLISHTEMPLATE, OnBnClickedEnglishtemplate)
 	ON_BN_CLICKED(IDC_NOCLOSEONRED, OnBnClickedNocloseonred)
 END_MESSAGE_MAP()
 
@@ -143,7 +138,6 @@ BOOL CSetMainPage::OnInitDialog()
 	m_sFontName = m_regFontName;
 	m_dwFontSize = m_regFontSize;
 	m_bCheckNewer = m_regCheckNewer;
-	m_bEnglishTemplate = m_regEnglishTemplate;
 	m_bNoCloseOnRed = m_regNoCloseOnRed;
 
 	GetDlgItem(IDC_NOCLOSEONRED)->EnableWindow(m_bAutoClose);
@@ -275,11 +269,6 @@ void CSetMainPage::OnBnClickedCommitfiletimes()
 }
 
 void CSetMainPage::OnBnClickedChecknewerversion()
-{
-	SetModified();
-}
-
-void CSetMainPage::OnBnClickedEnglishtemplate()
 {
 	SetModified();
 }
