@@ -1,6 +1,10 @@
 - ADD: The path to client certificates and the client
        certificate password can now be saved. (Stefan)
 - CHG: improved dialog for creating repositories. (Stefan)
+- CHG: The "paste log template in english" setting is now
+       a project property (tsvn:logfilelistenglish). Set
+       this property to "false" if you want that template
+       pasted in your local language. (Stefan)
 
 Version 1.1.0
 - ADD: Width marker for log messages. (Stefan)
